fixed introduced bug with overlapping image over console

--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,6 @@ input:focus {
 }
 .specialRow{
   padding-top:1em;
-  padding-left:3em;
   margin-bottom: 4em;
 }
 
